added high scores page

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -341,7 +341,8 @@ h3 {
   background-color: white;
 }
 
-.button:hover {
+.button:hover,
+input:hover {
   cursor: pointer;
   -webkit-box-shadow: 0 4px 1px 0 rgba(86, 185, 235, 0.5);
           box-shadow: 0 4px 1px 0 rgba(86, 185, 235, 0.5);
@@ -359,6 +360,62 @@ h3 {
   cursor: not-allowed;
   -webkit-transform: none;
           transform: none;
+}
+
+form {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+input {
+  margin-bottom: 1rem;
+  width: 20rem;
+  padding: 1.5rem;
+  font-size: 1.8rem;
+  border: none;
+  -webkit-box-shadow: 0 0.1rem 1.4rem 0 rgba(86, 185, 235, 0.5);
+          box-shadow: 0 0.1rem 1.4rem 0 rgba(86, 185, 235, 0.5);
+}
+
+input::-webkit-input-placeholder {
+  color: #aaa;
+}
+
+input:-ms-input-placeholder {
+  color: #aaa;
+}
+
+input::-ms-input-placeholder {
+  color: #aaa;
+}
+
+input::placeholder {
+  color: #aaa;
+}
+
+#highScoresList {
+  list-style: none;
+  padding-left: 0;
+  margin-bottom: 4rem;
+}
+
+.highScore {
+  font-size: 2.8rem;
+  margin-bottom: 0.5rem;
+}
+
+.highScore:hover {
+  -webkit-transform: scale(1.025);
+          transform: scale(1.025);
 }
 
 .choiceContainer {
