--- a/styles/_buttonStyles.scss
+++ b/styles/_buttonStyles.scss
@@ -10,7 +10,8 @@
     background-color: white;
 }
 
-.button:hover {
+.button:hover,
+input:hover {
     cursor: pointer;
     box-shadow: 0 4px 1px 0 rgba(86, 185, 235, 0.5);
     transform: translateY(-2px);
@@ -21,4 +22,41 @@
     box-shadow: none;
     cursor: not-allowed;
     transform: none;
+}
+
+//FORM
+
+form {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+input {
+    margin-bottom: 1rem;
+    width: 20rem;
+    padding: 1.5rem;
+    font-size: 1.8rem;
+    border: none;
+    box-shadow: 0 0.1rem 1.4rem 0 rgba(86, 185, 235, 0.5);
+}
+
+input::placeholder {
+    color: #aaa;
+}
+
+#highScoresList {
+    list-style: none;
+    padding-left: 0;
+    margin-bottom: 4rem;
+}
+
+.highScore {
+    font-size: 2.8rem;
+    margin-bottom: 0.5rem;
+}
+
+.highScore:hover {
+    transform: scale(1.025);
 }
